Added about me page image and content

--- a/index.html
+++ b/index.html
@@ -45,6 +45,49 @@
       </div>
     </nav>
 
+  <!-- Creates the Overall Grid -->
+  <div class="container">
+
+    <!-- First Row -->
+    <div class="row">
+
+      <!-- First (and only column) -->
+      <div class="col-md-12">
+        <h2> About Me</h2>
+      <hr class="line_class">
+
+      </div>
+    </div>
+
+    <!-- Second Row -->
+    <div class="row">
+
+      <!-- First of two columns -->
+      <div class="col-md-6">
+        <img src="assets\images\sudar.JPG" alt="Sudar Meruva" height="150" width="150">
+      </div>
+
+      <!-- Second of two columns -->
+      <div class="col-md-6">
+        <p>I have two decades of experience developing Enterprise applications in various technologies. I am a full stack
+            developer fully capable of carrying out complex projects from the concept phase through architecture design,
+            implementation, and DevOps to maintenance.
+          </P>
+          <br>
+          <p>I am certified Scrum Master and successfully introduced Agile Scrum development in my team. In addition to
+            working as Sr. Developer, i have 12 years of experience as a Software Development Manager.
+          </P>
+          <br>
+          <p>Built a high-performance team, started ESD BI & ESD NDW Teams, established Offshore Development teams and saved
+            over $20M over 8 years.
+        </P>
+    
+      </div>
+
+    </div>
+
+  </div>
+
 
 </body>
 </html>
