Added grid to all three pages

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,44 +8,98 @@
     <title>Responsive Portfolio - Contact</title>
 
     <!-- We link our html to the Bootstrap CDN -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
 </head>
+
 <body>
-    
+
     <!-- Container Div -->
-  <div class="container">
+    <div class="container">
 
-    <!-- Section 1: Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!-- Section 1: Navbar-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-      <!-- Our brand / logo -->
-      <a class="navbar-brand" href="#">Sudar Meruva</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+            <!-- Our brand / logo -->
+            <a class="navbar-brand" href="#">Sudar Meruva</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <!-- Collapsible button -->
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ml-auto">
+            <!-- Collapsible button -->
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav ml-auto">
 
-          <!-- The links of our navbar -->
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
-          </li>
+                    <!-- The links of our navbar -->
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
+                    </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-          </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
-          </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+                    </li>
 
-          </ul>
-      </div>
-    </nav>
+                </ul>
+            </div>
+        </nav>
 
+        <!-- Creates the Overall Grid -->
+        <div class="container">
+
+            <!-- First Row -->
+            <div class="row">
+                <div class="col-lg-9">
+                    <!-- First (and only column) -->
+                    <div class="col-md-12">
+                        <h2>Contact</h2>
+                        <hr class="line_class">
+
+                    </div>
+                </div>
+
+                <!-- Second Row -->
+                <div class="row">
+
+                    <!-- First and only columns -->
+                    <!-- <div class="col-md-12"> -->
+                    <div class="col-md-12">
+                        <form class="input_class">
+                            Name<br>
+                            <input type="text" name="input_username_class" placeholder="Sudar Meruva" size=100px><br>
+                            <br>
+                            Email<br>
+                            <input type="email" name="input_useremail_class" placeholder="meruva_s@yahoo.com"
+                                size=100px>
+                            <br><br>
+                            Message<br>
+                            <textarea name="input_usermessage_class" size=120px>
+                          </textarea>
+                            <br>
+                            <input type="submit" name="submit" class="button" value="Submit">
+                            <br>
+                            <br>
+                        </form>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="footer_teal">
+                <br>
+            </div>
+            <div class="footer_grey">
+                <br>
+                <h6> Copyright&copy;</h6>
+            </div>
+        </footer>
 
 </body>
+
 </html>
