--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,87 +8,139 @@
     <title>Responsive Portfolio - About</title>
 
     <!-- We link our html to the Bootstrap CDN -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
 </head>
+
 <body>
-    
+
     <!-- Container Div -->
-  <div class="container">
+    <div class="container">
 
-    <!-- Section 1: Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!-- Section 1: Navbar-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-      <!-- Our brand / logo -->
-      <a class="navbar-brand" href="#">Sudar Meruva</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+            <!-- Our brand / logo -->
+            <a class="navbar-brand" href="#">Sudar Meruva</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <!-- Collapsible button -->
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ml-auto">
+            <!-- Collapsible button -->
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav ml-auto">
 
-          <!-- The links of our navbar -->
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
-          </li>
+                    <!-- The links of our navbar -->
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
+                    </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-          </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
 
-          </ul>
-      </div>
-    </nav>
+                </ul>
+            </div>
+        </nav>
 
-  <!-- Creates the Overall Grid -->
-  <div class="container">
+        <!-- Creates the Overall Grid -->
+        <div class="container">
 
-    <!-- First Row -->
-    <div class="row">
+            <!-- First Row -->
+            <div class="row">
+                <div class="col-lg-9">
+                        <!-- <div> -->
+                    <div class="row">
+                        <!-- First (and only column) -->
+                        <div class="col-md-12">
+                            <h2> About Me</h2>
+                            <hr class="line_class">
 
-      <!-- First (and only column) -->
-      <div class="col-md-12">
-        <h2> About Me</h2>
-      <hr class="line_class">
+                        </div>
+                    </div>
 
-      </div>
-    </div>
+                    <!-- Second Row -->
+                    <div class="row">
+                        <!-- First of two columns -->
+                        <div class="col-md-6">
 
-    <!-- Second Row -->
-    <div class="row">
+                            <img src="assets\images\sudar.JPG" alt="Sudar Meruva" height="150" width="150">
+                        </div>
 
-      <!-- First of two columns -->
-      <div class="col-md-6">
-        <img src="assets\images\sudar.JPG" alt="Sudar Meruva" height="150" width="150">
-      </div>
+                        <!-- Second of two columns -->
+                        <div class="col-md-6">
+                            <p>I have two decades of experience developing Enterprise applications in various
+                                technologies.
+                                I am
+                                a full stack
+                                developer fully capable of carrying out complex projects from the concept phase through
+                                architecture design,
+                                implementation, and DevOps to maintenance.
+                            </P>
 
-      <!-- Second of two columns -->
-      <div class="col-md-6">
-        <p>I have two decades of experience developing Enterprise applications in various technologies. I am a full stack
-            developer fully capable of carrying out complex projects from the concept phase through architecture design,
-            implementation, and DevOps to maintenance.
-          </P>
-          <br>
-          <p>I am certified Scrum Master and successfully introduced Agile Scrum development in my team. In addition to
-            working as Sr. Developer, i have 12 years of experience as a Software Development Manager.
-          </P>
-          <br>
-          <p>Built a high-performance team, started ESD BI & ESD NDW Teams, established Offshore Development teams and saved
-            over $20M over 8 years.
-        </P>
-    
-      </div>
+                            <p>I am certified Scrum Master and successfully introduced Agile Scrum development in my
+                                team.
+                                In
+                                addition to
+                                working as Sr. Developer, i have 12 years of experience as a Software Development
+                                Manager.
+                            </P>
 
-    </div>
+                            <p>Built a high-performance team, started ESD BI & ESD NDW Teams, established Offshore
+                                Development
+                                teams and saved
+                                over $20M over 8 years.
+                            </P>
 
-  </div>
+                        </div>
+                    </div>
+                    <!-- third  Row -->
+                    <div class="row">
+                        <!-- First (and only column) -->
+                        <div class="col-md-12">
 
+                            <p>Team Transformation - Lead Waterfall to Agile Scrum transformation, Windows -> Web ->
+                                Responsive
+                                HTML5, Auto
+                                deployment, Auto Test and DevOps.
+
+                            </P>
+
+                            <p> My interest outside of work is my Home Theater, Coaching Rec Soccer, Cheer my son at EDP
+                                Soccer
+                                league, Help
+                                out my daughter’s Girl Scout Troop and gardening in spring and summer.
+                            </P>
+
+                            <p>Please find my top accomplishments under Portfolio tab and feel free to contact me under
+                                contacts
+                                tab.</p>
+
+                            <hr class="line_class">
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="push"></div>
+            </div>
+
+            <footer>
+                <div class="footer_teal">
+                    <br>
+                </div>
+                <div class="footer_grey">
+                    <br>
+                    <h6> Copyright&copy;</h6>
+                </div>
+            </footer>
 
 </body>
+
 </html>
