--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,8 @@
 
     <!-- We link our html to the Bootstrap CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
+
 
 </head>
 
@@ -18,12 +20,13 @@
     <div class="container">
 
         <!-- Section 1: Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
 
             <!-- Our brand / logo -->
-            <a class="navbar-brand" href="#">Sudar Meruva</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <h2 class="navbar-brand text-white" style="background-color: #1D6768;">Sudar Meruva</h2>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -68,64 +71,103 @@
                     <!-- Second Row -->
                     <div class="row">
                         <!-- First of two columns -->
-                        <div class="col-md-6">
+                        <!-- <div class="col-md-6">
 
                             <div class="site-dev">
                                 <span>Site Development Tool</span>
+                            </div> -->
+
+                        <div class="col-md-6 card bg-transparent border-0 text-white">
+                            <img class="card-img" src="assets/images/cellsite-development.jpg" alt="Card image">
+                            <div class="card-img-overlay">
+                                <h5 class="card-title">Site Development Tool</h5>
+
                             </div>
-
-
                         </div>
 
-                        <!-- Second of two columns -->
-                        <div class="col-md-6">
+                    </div>
+
+                    <!-- Second of two columns -->
+                    <!-- <div class="col-md-6">
                             <div class="itsm">
                                 <span>IT service management</span>
-                            </div>
+                            </div> -->
+
+                    <div class="col-md-6  card bg-transparent border-0 text-white">
+                        <img class="card-img" src="assets/images/ITSM.png" alt="Card image">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">IT service management</h5>
 
                         </div>
                     </div>
-
-                    <!-- Third Row -->
-                    <div class="row">
-                        <!-- First of two columns -->
-                        <div class="col-md-6">
-
-                            <div class="noc">
-                                <span>NOC One Console</span>
-                            </div>
-
-
-                        </div>
-
-                        <!-- Second of two columns -->
-                        <div class="col-md-6">
-                            <div class="cust-care">
-                                <span>Grand Central Customer Care</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Fourth Row -->
-                    <div class="row">
-                        <!-- First of two columns -->
-                        <div class="col-md-6">
-
-                            <div class="flex-item cicd">
-                                <span>CICD Pipeline</span>
-                            </div>
-
-
-                        </div>
-
-                    </div>
-
 
                 </div>
-                <hr class="line_class">
+            </div>
+
+            <!-- Third Row -->
+            <div class="row">
+                <!-- First of two columns -->
+                <!-- <div class="col-md-6">
+                        <div class="noc">
+                            <span>NOC One Console</span>
+                        </div>
+                    </div> -->
+
+                <div class="col-md-6 card bg-transparent border-0 text-white">
+                    <img class="card-img" src="assets/images/NOC.jpg" alt="Card image">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">NOC One Console</h5>
+
+                    </div>
+                </div>
+
+                <!-- Second of two columns -->
+                <!-- <div class="col-md-6">
+                        <div class="cust-care">
+                            <span>Grand Central Customer Care</span>
+                        </div>
+                    </div> -->
+
+                <div class="col-md-6 card bg-transparent border-0 text-white">
+                    <img class="card-img" src="assets/images/customer-care.png" alt="Card image">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Grand Central Customer Care</h5>
+
+                    </div>
+                </div>
+
 
             </div>
+
+            <!-- Fourth Row -->
+            <!-- <div class="row">
+                    First of two columns -->
+            <!-- <div class="col-md-6">
+
+                        <div class="flex-item cicd">
+                            <span>CICD Pipeline</span>
+                        </div>
+
+                    </div> -->
+
+            <div class="col-md-6 card bg-transparent border-0 text-white">
+                <img class="card-img" src="assets/images/CICD.jpg" alt="Card image">
+                <div class="card-img-overlay">
+                    <h5 class="card-title">CICD Pipeline</h5>
+
+                </div>
+            </div>
+
+
+
         </div>
+
+
+    </div>
+    <hr class="line_class">
+
+    </div>
+    </div>
 
     </div>
 
