--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,8 @@
 
     <!-- We link our html to the Bootstrap CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
+
 
 </head>
 
@@ -18,14 +20,16 @@
     <div class="container">
 
         <!-- Section 1: Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
 
             <!-- Our brand / logo -->
-            <a class="navbar-brand" href="#">Sudar Meruva</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <h2 class="navbar-brand text-white" style="background-color: #1D6768;">Sudar Meruva</h2>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
 
             <!-- Collapsible button -->
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -77,7 +81,7 @@
                                 size=100px>
                             <br><br>
                             Message<br>
-                            <textarea name="input_usermessage_class" size=120px>
+                            <textarea name="input_usermessage_class" size=100px>
                           </textarea>
                             <br>
                             <input type="submit" name="submit" class="button" value="Submit">
