updated the portfoloio cards

--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,10 @@
     <div class="container">
 
         <!-- Section 1: Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white; margin: 0; padding: 0;">
 
             <!-- Our brand / logo -->
-            <h2 class="navbar-brand text-white" style="background-color: #1D6768;">Sudar Meruva</h2>
+            <h2 class="navbar-brand text-white" style="background-color: #1D6768; padding: 20px; margin: 0;">Sudar Meruva</h2>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
