updated formatting all three pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
                     <div class="row">
                         <!-- First (and only column) -->
                         <div class="col-md-12">
-                            <h2 style="color: #1D6768;">Portfolio</h2>
+                            <h2 style="color: #1D6768;font-family: 'Georgia', Times, 'Times New Roman', serif;">Portfolio</h2>
                             <hr class="line_class">
 
                         </div>
