--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,8 @@
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white; margin: 0; padding: 0;">
 
             <!-- Our brand / logo -->
-            <h2 class="navbar-brand text-white" style="background-color: #1D6768; padding: 20px; margin: 0;">Sudar Meruva</h2>
+            <h2 class="navbar-brand text-white" style="background-color: #1D6768; padding: 20px; margin: 0;">Sudar
+                Meruva</h2>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +37,7 @@
                 <ul class="navbar-nav ml-auto">
 
                     <!-- The links of our navbar -->
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                         <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
                     </li>
 
@@ -44,7 +45,7 @@
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
 
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
                     </li>
 
@@ -54,43 +55,64 @@
 
         <!-- Creates the Overall Grid -->
         <div class="container">
+            <div class="col-lg-9" style="background-color: white; margin: 20px; padding: 10px;">
 
-            <!-- First Row -->
-            <div class="row">
-                <div class="col-lg-9">
-                    <!-- First (and only column) -->
-                    <div class="col-md-12">
-                        <h2>Contact</h2>
-                        <hr class="line_class">
-
-                    </div>
-                </div>
-
-                <!-- Second Row -->
+                <!-- First Row -->
                 <div class="row">
+                    <div class="col-lg-9">
+                        <!-- First (and only column) -->
+                        <div class="col-md-12">
+                            <h2 style="color: #1D6768;font-family: 'Georgia', Times, 'Times New Roman', serif;" >Contact</h2>
+                            <hr class="line_class">
 
-                    <!-- First and only columns -->
-                    <!-- <div class="col-md-12"> -->
-                    <div class="col-md-12">
-                        <form class="input_class">
-                            Name<br>
-                            <input type="text" name="input_username_class" placeholder="Sudar Meruva" size=100px><br>
-                            <br>
-                            Email<br>
-                            <input type="email" name="input_useremail_class" placeholder="meruva_s@yahoo.com"
-                                size=100px>
-                            <br><br>
-                            Message<br>
-                            <textarea name="input_usermessage_class" size=100px>
-                          </textarea>
-                            <br>
-                            <input type="submit" name="submit" class="button" value="Submit">
-                            <br>
-                            <br>
-                        </form>
-
+                        </div>
                     </div>
 
+                    <!-- Second Row -->
+                    <div class="row">
+
+                        <!-- First and only columns -->
+                        <!-- <div class="col-md-12"> -->
+                        <div class="col-md-12">
+                            <form class="input_class">
+                                <div class="form-group">
+                                    <label for="inputdefault">Name</label>
+                                    <input class="form-control" id="inputdefault" type="text"
+                                        name="input_username_class" placeholder="Sudar Meruva">
+                                </div>
+
+                                <!-- Name<br>
+                            <div class= width 100%>
+                            <input type="text" name="input_username_class" placeholder="Sudar Meruva">
+                        </div>
+                            <br> -->
+                                <br>
+                                <div class="form-group">
+                                    <label for="inputdefault">Email</label>
+                                    <input class="form-control" id="inputdefault" type="email"
+                                        name="input_useremail_class" placeholder="meruva_s@yahoo.com">
+                                </div>
+
+                                <!--                             
+                            Email
+                            <br>
+                            <input type="email" name="input_useremail_class" placeholder="meruva_s@yahoo.com">
+                            <br><br> -->
+
+                                <br>
+                                Message<br>
+                                <textarea name="input_usermessage_class">
+                          </textarea>
+                                <br>
+
+                                <input type="submit" name="submit" class="button" value="Submit">
+                                <br>
+                                <br>
+                            </form>
+
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
