--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="row">
                         <!-- First (and only column) -->
                         <div class="col-md-12">
-                            <h2 style="text-color: #1D6768;"> About Me</h2>
+                            <h2 style="color: #1D6768;font-family: 'Georgia', Times, 'Times New Roman', serif;"> About Me</h2>
                             <hr class="line_class">
 
                         </div>
