--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 
         <!-- Creates the Overall Grid -->
         <div class="container">
-            <div class="col-lg-9" style="background-color: white; margin: 20px; padding: 10px;">
+            <div class="col-lg-9">
 
                 <!-- First Row -->
                 <div class="row">
